--- a/p2/index.html
+++ b/p2/index.html
@@ -10,9 +10,9 @@
 		<h2>Target Platform Definition DSL and Generator - Releases Repository</h2>
 		This is an Eclipse update site/p2 repository providing all the releases of these versions. You should access it from Eclipse by using the following URL: 
 		<p>
-		<h3><a href="http://mbarbero.github.io/fr.obeo.releng.targetplatform/p2/">http://mbarbero.github.io/fr.obeo.releng.targetplatform/p2/</a></h3>
+		<h3><a href="http://jldelarbre.github.io/fr.obeo.releng.targetplatform/p2/">http://jldelarbre.github.io/fr.obeo.releng.targetplatform/p2/</a></h3>
 		or if you only want the latest version
-		<h3><a href="http://mbarbero.github.io/fr.obeo.releng.targetplatform/p2/latest/">http://mbarbero.github.io/fr.obeo.releng.targetplatform/p2/latest/</a></h3>
+		<h3><a href="http://jldelarbre.github.io/fr.obeo.releng.targetplatform/p2/latest/">http://jldelarbre.github.io/fr.obeo.releng.targetplatform/p2/latest/</a></h3>
 		</p>
 		</div>
 	</body>
